@@ -1,3 +1,9 @@
+2013-06-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  tests/bug-2181.c:
+	  Fix bug #2181.
+
 2013-06-03 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdcc.sln,
